unpackaged/main/default/objects/CMPL123CME__Investigation_Template__c/CMPL123CME__Investigation_Template__c.object-meta.xml
<CustomObject>
    <label>Investigation Admin</label>
    <nameField>
        <displayFormat>INV-T-{00000}</displayFormat>
        <label>Investigation Template No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investigation Admin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>