unpackaged/main/default/objects/CMPL123CME__Investigation_Template__c/fields/CMPL123CME__Investigation_Evaluation_Version__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Investigation_Evaluation_Version__c</fullName>
        <label>Investigation/Evaluation Version</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>