unpackaged/main/default/objects/CMPL123CME__Investigation_Template__c/fields/CMPL123CME__Investigation_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Investigation_Type__c</fullName>
        <label>Investigation Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>