unpackaged/main/default/objects/CMPL123CME__Investigation_Template__c/fields/CMPL123CME__Product_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Product_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Type</label>
        <referenceTo>CMPL123__Product__c</referenceTo>
        <relationshipName>Investigation_Templates</relationshipName>
        <type>Lookup</type>
    </CustomField>