unpackaged/main/default/objects/CMPL123CME__Investigation_Template__c/listViews/CMPL123CME__All.listView-meta.xml
<ListView>
        <fullName>CMPL123CME__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__Key_Value__c</columns>
        <columns>CMPL123CME__Product_Name__c</columns>
        <columns>CMPL123CME__Investigation_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>